# ship-test-gfx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  attributes.h  controller.c  gfx.c  gfx.h  gfxinit.c  gfxstatic.c  macros_defines.h  simple.c  simple.ld  soh.otr  tex_func.c  tex_func.h
assets/ncube/: model_old.inc.c  nin64ortho_small.h  nin64ortho_small_rgba16.h
docker/: Dockerfile
images/ncube/: header.h  model.inc.c  nin64ortho_small_pal.h
images/tools/: Makefile  ticonv.c
images/tools/n64graphics_ci_dir/: n64graphics_ci.c
port/include/PR/: gbi.h  os_convert.h  os_libc.h  ultratypes.h
port/libultra_pc/: CMakeLists.txt
port/libultra_pc/audio/: auxbus.c  bnkf.c  cents2ratio.c  copy.c  cseq.c  cseq.h  cseqp.h  cspdelete.c  cspgetchlvol.c  cspgetfxmix.c  cspgetpan.c  cspgetpriority.c  cspgetprogram.c  cspgetseq.c  cspgetstate.c  cspgettempo.c  cspgetvol.c  csplayer.c  cspplay.c  cspsendmidi.c  cspsetbank.c  cspsetchlvol.c  cspsetfxmix.c  cspsetpan.c  cspsetpriority.c  cspsetprogram.c  cspsetseq.c  cspsettempo.c  cspsetvol.c  cspstop.c  drvrNew.c  env.c  event.c  filter.c  heapalloc.c  heapcheck.c  heapinit.c  initfx.h  load.c  mainbus.c  (+67 more)
port/libultra_pc/gu/: align.c  frustum.c  guint.h  lookat.c  lookathil.c  lookatref.c  lookatstereo.c  mtxcatf.c  mtxcatl.c  mtxutil.c  normalize.c  ortho.c  perspective.c  position.c  poslight.c  poslighthil.c  random.c  rotate.c  rotateRPY.c  scale.c  sins.c  translate.c
port/libultra_pc/include/: gu.h  libaudio.h  os.h
port/libultra_pc/port/: mixer.c  mixer.h  ultraerror.c  ultraerror.h
port/src/: GbiWrap.cpp  PcMain.cpp  PcMain.h  main.c  os.h  stubs.c
src/main/: onetri.c
tools/: .gitignore
tools/n64graphics_ci_dir/: n64graphics_ci.h
